# aftermath-editor

./: .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.old.md  demo.html  e.html  helpers.js  index.html  package-lock.json  package.json  rsw.toml  script.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
aftermath-core/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
aftermath-core/caret/: Cargo.toml
aftermath-core/caret/src/: autocomplete.rs  caret.rs  editing.rs  editor_action_builder.rs  lib.rs  math_editor.rs  primitive.rs  undo_redo_manager.rs
aftermath-core/caret/src/editing/: caret_edit.rs  edit.rs  movement.rs  primitive_edit.rs
aftermath-core/caret/src/moving/: movement.rs
aftermath-core/caret/src/primitive/: caret_edit.rs  movement.rs  primitive_edit.rs
aftermath-core/caret/tests/: movement_tests.rs  selection_tests.rs
aftermath-core/input_tree/: Cargo.toml
aftermath-core/input_tree/src/: direction.rs  editing.rs  element.rs  focus.rs  grid.rs  input_focus.rs  input_node.rs  input_row_position.rs  input_row_range.rs  input_tree.rs  lib.rs  node.rs  print_helpers.rs  row.rs  row_macros.rs
aftermath-core/input_tree/src/editing/: basic_edit.rs  edit.rs  editable.rs  invertible.rs  row_indices_edit.rs
aftermath-core/input_tree/src/focus/: grid_range.rs  row_position.rs  row_range.rs
aftermath-core/input_tree/src/grid/: grid_view.rs  index2d.rs
aftermath-core/input_tree/tests/: edit_tests.rs  edit_update_range.rs  edit_update_range_tests.rs  editing_tests.rs  input_focus_tests.rs  input_position_tests.rs  printing_tests.rs
aftermath-core/math_layout/: Cargo.toml
aftermath-core/mathml_renderer/: Cargo.toml
aftermath-core/parse_rules/: Cargo.toml
aftermath-core/parser/: Cargo.toml  README.md
aftermath-core/parser/src/: ast_transformer.rs  autocomplete.rs  grapheme_matcher.rs  greedy_choice.rs  lexer.rs  lib.rs  make_parser.rs  math_parser.rs  math_semantic.rs  nfa.rs  nfa_builder.rs  parse_context.rs  parse_module.rs  parse_modules.rs  parse_rules.rs  parser.rs  parser_debug_error.rs  parser_extensions.rs  rule_collection.rs  rule_collections.rs  syntax_tree.rs  token_matcher.rs
aftermath-core/parser/src/parse_rules/: README.md  arithmetic_rules.rs  built_in_rules.rs  calculus_rules.rs  collections_rules.rs  comparison_rules.rs  core_rules.rs  function_rules.rs  logic_rules.rs  string_rules.rs  symbol_shortcut_rules.rs
aftermath-core/parser/src/parser/: arc_list.rs  greedy_choice.rs  math_parser.rs  pratt_parselet.rs  pratt_parser.rs  pratt_parser_old.rs
aftermath-core/parser/src/rule_collections/: arithmetic_rules.rs  built_in_rules.rs  calculus_rules.rs  collections_rules.rs  comparison_rules.rs  core_rules.rs  function_rules.rs  logic_rules.rs  string_rules.rs
aftermath-core/parser/src/syntax_tree/: display_syntax_tree.rs  node_identifier.rs  node_type_id.rs  syntax_node.rs  syntax_node_builder.rs
aftermath-core/parser/src/token_matcher/: capturing_group.rs  matcher_state.rs
aftermath-core/parser/tests/: autocomplete_tests.rs  chumsky_test.rs  chumsky_tests.rs  parser_error_tests.rs  parser_test.rs
aftermath-core/serialization/: Cargo.toml
aftermath-core/serialization/src/: lib.rs
aftermath-core/src/: experiments.rs  lib.rs  math_layout.rs  parser.rs
aftermath-core/web/: Cargo.toml
aftermath-core/web/src/: lib.rs  math_editor.rs  math_parser.rs
assets/: aftermath_core_bg-635ead5e.wasm  index-5c68f30f.css  index-c0337ce8.js  lil-gui.esm-0f09e890.js
mathml-editor-rs/: Cargo.toml
mathml-editor-rs/src/: lib.rs  math_layout.rs
src/: App.vue  array-utils.ts  assert.ts  main.ts  math-layout-zipper.ts  satisfies.ts  style.css
src/component/: README.md  caret-element.ts  caret-styles.css  caret.ts  debug-settings.ts  input-handler-element.ts  math-editor-styles.css  math-editor.ts  math-layout-caret.ts  math-layout-edit.ts  viewport-coordinate.ts
src/components/: HelloWorld.vue  MathEditor.vue  README.md  caret.ts  input-handler.ts  math-editor-styles.css  math-editor.ts  math-layout-caret.ts  viewport-coordinate.ts
src/core/: index.ts
src/editing/: caret-edit.ts  caret-move.ts  editing-autocomplete.ts  editing-caret-current-tokens.ts  editing-caret.ts  input-tree-edit.ts  math-layout-edit.ts  serialized-caret.ts  undo-redo-manager.ts
src/input-position/: input-grid-range.ts  input-row-position.ts  input-row-range.ts
src/input-tree/: input-node.ts  input-offset.ts  input-row-position.ts  input-tree.ts  input-zipper.ts  math-layout-offset.ts  math-layout-position.ts  math-layout-utils.ts  math-layout-zipper.ts  math-layout.ts  row-indices.ts  row.ts
src/math-editor/: array-utils.ts  consumable-stream.ts  math-ast.ts  math-editor.ts  math-ir-old.ts  math-ir-utils.ts  math-ir.ts  math-layout-utils.ts  math-layout.ts  mathml-converter.ts  mathml-spec.ts  mathml-utils.ts  token-stream.ts
utils/: publish.js
(+95 files in other folders)
