[package]
name = "caret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
input_tree = { path = "../input_tree" }
parser = { path = "../parser" }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "input_tree/wasm", "parser/wasm"]