[package]
name = "input_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tsify =  { version = "0.4", optional = true, default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:tsify"]