[package]
name = "parse_rules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
input_tree = { path = "../input_tree" }
parser = { path = "../parser" }
unicode-ident = "1.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git", default-features = false, features = ["extension", "unstable"] }