[package]
name = "aftermath-core"
version = "0.1.0"
authors = ["stefnotch <brandmairstefan@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0"
input_tree = { path = "../input_tree" }
parser = { path = "../parser" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
lol_alloc = "0.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]

